CallMD/src/objects/Medications__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dosage_Units__c</fullName>
        <label>Dosage Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mg</fullName>
                </value>
                <value>
                    <fullName>mcg</fullName>
                </value>
                <value>
                    <fullName>drops</fullName>
                </value>
                <value>
                    <fullName>units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dosage__c</fullName>
        <label>Dosage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often__c</fullName>
        <label>How often</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medications</label>
    <nameField>
        <label>Medications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>